# base-fastapi

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: README.md  env.py
alembic/versions/: 6ac0ea1163dc_create_initial_migration.py
app/: main.py
app/api/: __init__.py  auth.py  deps.py  health.py  user.py
app/common/: config.py  logger.py
app/db/: base.py  session.py
app/exceptions/: error_code.py  exception.py  exception_hanlder.py
app/middlewares/: logging_middleware.py
app/models/: user.py
app/schemas/: auth.py  common.py  health.py  user.py
app/services/: auth.py  user.py
app/utils/: jwt.py
docker/: Dockerfile
tests/: test_jwt.py
